﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-02-04 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/Config.class.php: bug #1409770 auto-detection and dirname on
      Windows, thanks to Alex - nixniemand
    * libraries/mult_submits.inc.php, server_databases.php: array to string 
      conversion
    * tbl_properties_operations.php, tbl_properties.php, tbl_import.php,
      tbl_change.php: bug #1415465, undefined $sql_query

2006-01-31 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php: bug #1412058, damaged table reporting
    * import.php: bug #1418382, CSV import does not work

2006-01-30 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1418145, missing global,
          thanks to Bananeweizen

2006-01-29 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/estonian updates, thanks to Marko Ellermaa - uhuu
    * lang/polish: updates, thanks to Jakub Wilk - ubanus
    * lang/japanese: Update, thanks to Tadashi Jokagi - elf2000.
    * lang/italian: update, thanks to Luca Rebellato
    * lang/norwegian: Update, thanks to Sven-Erik Andersen
    * db_details_structure.php: bug #1396998, notice for view row count
      in table list
    * libraries/session.inc.php: bug #1414628, session.save_handler might
      be set to something different than "files". Thanks to Nicola Asuni
    ### 2.8.0-beta1 released

2006-01-28 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1396998, avoid displaying exact row
    count for views, work in progress

2006-01-26 Michal Čihař  <michal@cihar.com>
    * lang/czech: Translation update.

2006-01-25 Marc Delisle  <lem9@users.sourceforge.net>
   * db_details_qbe.php: use PMA_countRecords() when possible, to be able
     to centralise into it the VIEW detection logic
   * sql.php: affected rows are returned in case of DELETE with no WHERE 